import Tarea from "../clases/Tarea";

export class Gestor{

    public crearTarea(tarea: Tarea): void{
        
        tarea.setTitulo("LUCHUGA");
        

        //pendiente.push(tarea);
    }

    public editarTarea(tarea: Tarea){
        //tarea.setTitulo();

    }
}