import Tarea from "../clases/Tarea";
import MyNode from "../Listas/Node";

export class Busqueda {
    /*
    buscarPorTitulo(titulo: string): Tarea {
        
        return;
    }

    buscarPorFechaVencimiento(fecha: Date): Tarea {
        return;
    }
*/
}
